# GMR

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sample.txt
client_programs/: letter_count.cc  word_count.cc
input_files/: read_in_contents.cc  sample_3.txt
protos/: coordinator.proto  mapreduce.proto  stringreverse.proto
src/: client.cc  coordinator.cc  gabriel_map_reduce.cc  gabriel_map_reduce.h  server.cc  task_factory.h  worker.cc
src/services/: coordinator.cc  worker.cc
src/tasks/: map_task.cc  map_task.h  task_factory.h  task_interface.h
